<resources>
    <string name="app_name">AGS - Order Booking Portal</string>
    <!-- Google Maps SDK key. Ensure "Maps SDK for Android" is enabled for this key
         in the Google Cloud console, otherwise the map tiles will not load. -->
    <string name="google_maps_key" translatable="false">AIzaSyBXCeX7nO_VnHAz5_i9Jb_VJXrVFkH74Yg</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_signup_acitivity">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="up_title">Update</string>
    <string name="up_mes">Kindly update your application first from playstore</string>
    <string name="up">update</string>
    <string name="exit">exit</string>
    <string name="add">Add Order</string>
    <string name="download">Download Products</string>
    <string name="update">List Of All Orders</string>
    <string name="logout">Logout</string>
    <string name="orderForm">Order Form</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="splashWelomeNote">Welcome</string>
    <string name="splashWelomeNote2">AGS Mobile Order Booking</string>
    <string name="companyName">Powered By Paxees Technologies ©2023</string>
    <string name="something_went_wrong">Something went wrong, try again later</string>
    <string name="notifications_admin_channel_name">admin</string>
    <string name="notifications_admin_channel_description">admin_description</string>
    <string name="channel_Id">channel_firebase_notification</string>
    <string name="channel_name">channel_firebase_notificaiton_name</string>
    <string name="channel_description">channel_firebase_notificaiton_description</string>
    <string name="exportPDF">Export File</string>
    <string name="clearMasterData">Clear MasterData</string>
    <string name="clearOrders">Clear AllOrders</string>
    <string name="updateProfile">Update Profile</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="setting">Setting</string>
    <string name="productOffer">Products Offer</string>
    <string name="orderStatistics">Order Statistics</string>
    <string name="title_activity_login2222">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="characters">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@!#$%^*()_+=-:\';,./?|/</string>
    <string name="updateCustomerProfile">Update Customer</string>
    <string name="resetPassword">Reset Password</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
